--- a/Ask Extension/manifest.json
+++ b/Ask Extension/manifest.json
@@ -1,7 +1,6 @@
 {
-  "manifest_version": 2,
-
   "name": "Ask.com Search Extension",
+  "short_name":  "Ask.com",
   "description": "This extension will search Ask.com for a given phrase.",
   "version": "1.0",
 
@@ -11,7 +10,9 @@
   },
 
   "icons": {
-    "16": "icon-bitty.png"
+    "16": "icon-bitty.png",
+    "48": "icon-small.png",
+    "128": "icon.png"
   },
 
   "manifest_version": 2
